; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_base64.c_isc_base64_decodestring.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_base64.c_isc_base64_decodestring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ISC_R_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isc_base64_decodestring(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @base64_decode_init(i32* %5, i32 -1, i32* %7)
  br label %9

9:                                                ; preds = %30, %29, %2
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds i8, i8* %10, i32 1
  store i8* %11, i8** %3, align 8
  %12 = load i8, i8* %10, align 1
  %13 = sext i8 %12 to i32
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %9
  br label %34

17:                                               ; preds = %9
  %18 = load i32, i32* %6, align 4
  %19 = icmp eq i32 %18, 32
  br i1 %19, label %29, label %20

20:                                               ; preds = %17
  %21 = load i32, i32* %6, align 4
  %22 = icmp eq i32 %21, 9
  br i1 %22, label %29, label %23

23:                                               ; preds = %20
  %24 = load i32, i32* %6, align 4
  %25 = icmp eq i32 %24, 10
  br i1 %25, label %29, label %26

26:                                               ; preds = %23
  %27 = load i32, i32* %6, align 4
  %28 = icmp eq i32 %27, 13
  br i1 %28, label %29, label %30

29:                                               ; preds = %26, %23, %20, %17
  br label %9

30:                                               ; preds = %26
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @base64_decode_char(i32* %5, i32 %31)
  %33 = call i32 @RETERR(i32 %32)
  br label %9

34:                                               ; preds = %16
  %35 = call i32 @base64_decode_finish(i32* %5)
  %36 = call i32 @RETERR(i32 %35)
  %37 = load i32, i32* @ISC_R_SUCCESS, align 4
  ret i32 %37
}

declare dso_local i32 @base64_decode_init(i32*, i32, i32*) #1

declare dso_local i32 @RETERR(i32) #1

declare dso_local i32 @base64_decode_char(i32*, i32) #1

declare dso_local i32 @base64_decode_finish(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
